# LLM2Obsidian

./: .env.example  .gitignore  README.md  pyproject.toml
.aiconfig/: manifest.yaml  structure_diff.json
.github/: pull_request_template.md
configs/: app.yaml
docs/: api.md  architecture.md  example.md  operations.md  plan.md  plan_old.md  project_architecture.md  prompts.md  quality_tuning_execution_plan.md  refactor_report.md  walkthrough.md
docs/specs/: dirroot.md  git-flow.md
output/: develop-branch-review.md  final-delivery-review.md
output/quality-tuning-rounds/: phase-ef-final-acceptance.md  scorecard_template.md
scripts/: README.md  bootstrap_dev.sh  create_or_update_pr.py  reindex_all.py  replay_quality_samples.py  run_dev.sh  seed_demo_data.py  start_dashboard.ps1
src/: main.py
src/obsidian_agent/: __init__.py  app.py  cli.py  config.py  logging.py  test_support.py
src/obsidian_agent/api/: deps.py  routes_capture.py  routes_maintenance.py  routes_review.py  routes_search.py  routes_smart.py  routes_ui.py
src/pipelines/: __init__.py
tests/integration/: test_capture_flow.py  test_capture_variants.py  test_maintenance_flow.py  test_retrieval_flow.py  test_review_flow.py  test_smart_capture.py  test_smart_relink.py  test_smart_teaching.py  test_ui_routes.py
tests/unit/: test_app.py  test_app_container.py  test_error_extractor_service.py  test_frontmatter.py  test_http_utils.py  test_main.py  test_markdown.py  test_node_writer_service.py  test_obsidian_service.py  test_policies.py  test_quality_tuning_samples.py
(+73 files in other folders)
